--- a/frontend/src/css/output.css
+++ b/frontend/src/css/output.css
@@ -685,6 +685,36 @@ html {
   }
 }
 
+.alert {
+  display: grid;
+  width: 100%;
+  grid-auto-flow: row;
+  align-content: flex-start;
+  align-items: center;
+  justify-items: center;
+  gap: 1rem;
+  text-align: center;
+  border-radius: var(--rounded-box, 1rem);
+  border-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: var(--fallback-b2,oklch(var(--b2)/var(--tw-border-opacity)));
+  padding: 1rem;
+  --tw-text-opacity: 1;
+  color: var(--fallback-bc,oklch(var(--bc)/var(--tw-text-opacity)));
+  --alert-bg: var(--fallback-b2,oklch(var(--b2)/1));
+  --alert-bg-mix: var(--fallback-b1,oklch(var(--b1)/1));
+  background-color: var(--alert-bg);
+}
+
+@media (min-width: 640px) {
+  .alert {
+    grid-auto-flow: column;
+    grid-template-columns: auto minmax(auto,1fr);
+    justify-items: start;
+    text-align: start;
+  }
+}
+
 .avatar.placeholder > div {
   display: flex;
   align-items: center;
@@ -1371,10 +1401,6 @@ html {
   height: 110px;
 }
 
-.h-\[120px\] {
-  height: 120px;
-}
-
 .h-\[170px\] {
   height: 170px;
 }
@@ -1401,10 +1427,6 @@ html {
 
 .h-\[65px\] {
   height: 65px;
-}
-
-.h-\[80px\] {
-  height: 80px;
 }
 
 .h-auto {
@@ -1461,6 +1483,10 @@ html {
 
 .min-w-\[30px\] {
   min-width: 30px;
+}
+
+.max-w-\[30px\] {
+  max-width: 30px;
 }
 
 .max-w-\[500px\] {
@@ -1525,6 +1551,14 @@ html {
 
 .overflow-x-auto {
   overflow-x: auto;
+}
+
+.overflow-y-hidden {
+  overflow-y: hidden;
+}
+
+.scroll-smooth {
+  scroll-behavior: smooth;
 }
 
 .text-nowrap {
@@ -1606,6 +1640,11 @@ html {
 
 .bg-\[rgba\(0\2c 0\2c 0\2c 0\.59\)\] {
   background-color: rgba(0,0,0,0.59);
+}
+
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
 .bg-blurryPurple {
@@ -1721,6 +1760,10 @@ html {
 
 .pr-7 {
   padding-right: 1.75rem;
+}
+
+.pt-1 {
+  padding-top: 0.25rem;
 }
 
 .pt-16 {
