--- a/frontend/src/css/global.css
+++ b/frontend/src/css/global.css
@@ -1,32 +1,32 @@
 @font-face {
     font-family: agbalumo;
-    src: url(../fonts/Agbalumo-Regular.ttf);
+    src: url(../assets/fonts/Agbalumo-Regular.ttf);
 }
 
 @font-face {
     font-family: isidoraBold;
-    src: url(../fonts/IsidoraSansAltBold.otf);
+    src: url(../assets/fonts/IsidoraSansAltBold.otf);
 }
 @font-face {
     font-family: isidoraSemiBold;
-    src: url(../fonts/IsidoraSansAltSemiBold.otf);
+    src: url(../assets/fonts/IsidoraSansAltSemiBold.otf);
 }
 @font-face {
     font-family: isidoraReg;
-    src: url(../fonts/IsidoraSansAltRegular.otf);
+    src: url(../assets/fonts/IsidoraSansAltRegular.otf);
 }
 @font-face {
     font-family: robotoc;
-    src: url("../fonts/RobotoCondensed-Regular.ttf");
+    src: url("../assets/fonts/RobotoCondensed-Regular.ttf");
 }
 @font-face {
     font-family: isidoraLight;
-    src: url(../fonts/IsidoraSansAltLight.otf);
+    src: url(../assets/fonts/IsidoraSansAltLight.otf);
 }
 
 @font-face {
     font-family: circularSpo;
-    src: url(../fonts/CircularSpotifyTxT-Light.ttf);
+    src: url(../assets/fonts/CircularSpotifyTxT-Light.ttf);
 }
 .robotoc {
     font-family: robotoc;
@@ -64,16 +64,10 @@
 .clicked:hover {
     scale: 0.9;
 }
-body::-webkit-scrollbar-track:horizontal {
-    border-radius: 2px;
-    background: red;
-}
-body::-webkit-scrollbar-thumb:horizontal {
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    background: red;
-    border-radius: 2px;
-}
 
+.scrollbar {
+    scrollbar-width: none;
+}
 .dark {
     --mainBg: 10, 8, 45;
     --text-color: 255, 255, 255;
