--- a/frontend/src/css/global.css
+++ b/frontend/src/css/global.css
@@ -112,6 +112,28 @@
     background: rgb(249, 0, 158);
 }
 
+.fill button {
+    transition: border 0.5s ease-out;
+}
+.fill:hover span {
+    transition: color 0.5s ease-out;
+}
+
+.fill:hover button {
+    border-color: rgb(255, 255, 255);
+}
+
+.fill:hover span {
+    color: rgb(255, 255, 255);
+}
+.toCenter {
+    position: absolute;
+    top: 50%;
+    right: 50%;
+    transform: translateX(-50%);
+    /*transform: translateY(-50%);*/
+}
+
 .dark {
     --mainBg: 10, 8, 45;
     --text-color: 255, 255, 255;
