--- a/frontend/src/css/global.css
+++ b/frontend/src/css/global.css
@@ -52,10 +52,16 @@
     box-shadow: inset 0px -5px 0px rgba(0, 0, 0, 0.3);
 }
 .outsetShadow {
-    box-shadow: inset -1px -1px 0px rgba(0, 0, 0, 0.3);
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
 }
 .insetShadowTwo {
     box-shadow: inset 0px -3px 0px rgba(0, 0, 0, 0.3);
+}
+.topNavShadow {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.3);
+}
+.shinyShadow {
+    box-shadow: inset -2px -2px 18px rgba(255, 255, 255, 0.06);
 }
 .adora {
     font-family: adora;
