"true or false" answer type and "type answer" answer type added ,empty field warning and other issues fixed and upgraded. quiz changes can now be save manually with a button click,oninput re-render has been added back but will be fixed in the future with a better solution. COMMIT!!

--- a/frontend/src/css/global.css
+++ b/frontend/src/css/global.css
@@ -139,6 +139,21 @@
     transform: translateX(-50%);
     /*transform: translateY(-50%);*/
 }
+.tickColor:checked::before {
+    content: "\2713";
+    color: white;
+    text-align: center;
+    font-size: 11px;
+    font-weight: bold;
+}
+.tickColor::before {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    color: transparent;
+}
 
 .dark {
     --mainBg: 10, 8, 45;
