--- a/frontend/src/css/output.css
+++ b/frontend/src/css/output.css
@@ -1,5 +1,5 @@
 /*
-! tailwindcss v3.4.4 | MIT License | https://tailwindcss.com
+! tailwindcss v3.4.7 | MIT License | https://tailwindcss.com
 */
 
 /*
@@ -1806,8 +1806,16 @@ html {
   bottom: 0px;
 }
 
+.bottom-\[-23px\] {
+  bottom: -23px;
+}
+
 .bottom-\[-2px\] {
   bottom: -2px;
+}
+
+.bottom-\[-45px\] {
+  bottom: -45px;
 }
 
 .bottom-\[50\%\] {
@@ -1822,12 +1830,20 @@ html {
   left: 0.75rem;
 }
 
+.left-\[-45px\] {
+  left: -45px;
+}
+
 .left-\[13px\] {
   left: 13px;
 }
 
 .left-\[16px\] {
   left: 16px;
+}
+
+.left-\[19px\] {
+  left: 19px;
 }
 
 .left-\[50\%\] {
@@ -1876,6 +1892,10 @@ html {
 
 .top-2 {
   top: 0.5rem;
+}
+
+.top-3 {
+  top: 0.75rem;
 }
 
 .top-\[-10px\] {
@@ -1998,10 +2018,6 @@ html {
   margin-top: 1.75rem;
 }
 
-.mt-8 {
-  margin-top: 2rem;
-}
-
 .mt-\[18px\] {
   margin-top: 18px;
 }
@@ -2050,6 +2066,10 @@ html {
   height: 1.25rem;
 }
 
+.h-7 {
+  height: 1.75rem;
+}
+
 .h-\[100px\] {
   height: 100px;
 }
@@ -2094,6 +2114,10 @@ html {
   height: 33px;
 }
 
+.h-\[38px\] {
+  height: 38px;
+}
+
 .h-\[40px\] {
   height: 40px;
 }
@@ -2120,6 +2144,10 @@ html {
 
 .min-h-16 {
   min-height: 4rem;
+}
+
+.min-h-36 {
+  min-height: 9rem;
 }
 
 .min-h-full {
@@ -2162,12 +2190,20 @@ html {
   width: 1.5rem;
 }
 
+.w-7 {
+  width: 1.75rem;
+}
+
 .w-\[100\%\] {
   width: 100%;
 }
 
 .w-\[100px\] {
   width: 100px;
+}
+
+.w-\[145px\] {
+  width: 145px;
 }
 
 .w-\[180px\] {
@@ -2190,8 +2226,24 @@ html {
   width: 350px;
 }
 
+.w-\[38px\] {
+  width: 38px;
+}
+
 .w-full {
   width: 100%;
+}
+
+.w-36 {
+  width: 9rem;
+}
+
+.w-44 {
+  width: 11rem;
+}
+
+.w-48 {
+  width: 12rem;
 }
 
 .min-w-24 {
@@ -2398,8 +2450,20 @@ html {
   border-bottom-width: 1px;
 }
 
+.border-b-\[10px\] {
+  border-bottom-width: 10px;
+}
+
 .border-b-\[2px\] {
   border-bottom-width: 2px;
+}
+
+.border-l-\[5px\] {
+  border-left-width: 5px;
+}
+
+.border-r-\[5px\] {
+  border-right-width: 5px;
 }
 
 .border-solid {
@@ -2427,8 +2491,20 @@ html {
   border-color:  rgb(var(--light-gray));
 }
 
+.border-mainBg {
+  border-color: rgb(var(--mainBg));
+}
+
 .border-shinyPurple {
   border-color: rgb(var(--shiny-purple));
+}
+
+.border-l-transparent {
+  border-left-color: transparent;
+}
+
+.border-r-transparent {
+  border-right-color: transparent;
 }
 
 .bg-\[rgba\(0\2c 0\2c 0\2c 0\.59\)\] {
@@ -2589,6 +2665,16 @@ html {
 .py-\[9px\] {
   padding-top: 9px;
   padding-bottom: 9px;
+}
+
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
 }
 
 .pb-10 {
@@ -2787,6 +2873,12 @@ html {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .outline-none {
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -2821,6 +2913,15 @@ html {
   color: rgba(var(--placeholder));
 }
 
+.checked\:bg-grayOne:checked {
+  background-color: rgb(var(--gray-one));
+}
+
+.checked\:bg-red-600:checked {
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
+}
+
 .hover\:scale-\[0\.9\]:hover {
   --tw-scale-x: 0.9;
   --tw-scale-y: 0.9;
@@ -2838,6 +2939,11 @@ html {
 @media (min-width: 660px) {
   .smd\:max-w-\[580px\] {
     max-width: 580px;
+  }
+
+  .smd\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
 }
 
