--- a/frontend/src/css/output.css
+++ b/frontend/src/css/output.css
@@ -1898,10 +1898,6 @@ html {
   top: -10px;
 }
 
-.top-\[-75px\] {
-  top: -75px;
-}
-
 .top-\[10px\] {
   top: 10px;
 }
@@ -1932,6 +1928,10 @@ html {
 
 .z-20 {
   z-index: 20;
+}
+
+.z-50 {
+  z-index: 50;
 }
 
 .z-\[500\] {
@@ -1966,12 +1966,24 @@ html {
   margin-bottom: 1.75rem;
 }
 
+.mb-\[-3px\] {
+  margin-bottom: -3px;
+}
+
 .mb-\[15px\] {
   margin-bottom: 15px;
 }
 
+.mb-\[3px\] {
+  margin-bottom: 3px;
+}
+
 .mb-\[5px\] {
   margin-bottom: 5px;
+}
+
+.ml-3 {
+  margin-left: 0.75rem;
 }
 
 .mr-1 {
@@ -2010,8 +2022,16 @@ html {
   margin-top: 1.25rem;
 }
 
+.mt-6 {
+  margin-top: 1.5rem;
+}
+
 .mt-7 {
   margin-top: 1.75rem;
+}
+
+.mt-8 {
+  margin-top: 2rem;
 }
 
 .mt-\[18px\] {
@@ -2024,6 +2044,10 @@ html {
 
 .block {
   display: block;
+}
+
+.inline {
+  display: inline;
 }
 
 .flex {
@@ -2040,6 +2064,10 @@ html {
 
 .h-10 {
   height: 2.5rem;
+}
+
+.h-16 {
+  height: 4rem;
 }
 
 .h-24 {
@@ -2118,6 +2146,10 @@ html {
   height: 40px;
 }
 
+.h-\[45px\] {
+  height: 45px;
+}
+
 .h-\[50px\] {
   height: 50px;
 }
@@ -2132,6 +2164,26 @@ html {
 
 .h-full {
   height: 100%;
+}
+
+.h-\[70px\] {
+  height: 70px;
+}
+
+.h-\[85px\] {
+  height: 85px;
+}
+
+.h-3 {
+  height: 0.75rem;
+}
+
+.max-h-\[375px\] {
+  max-height: 375px;
+}
+
+.max-h-\[550px\] {
+  max-height: 550px;
 }
 
 .max-h-full {
@@ -2214,6 +2266,10 @@ html {
   width: 300px;
 }
 
+.w-\[30px\] {
+  width: 30px;
+}
+
 .w-\[33px\] {
   width: 33px;
 }
@@ -2226,8 +2282,36 @@ html {
   width: 38px;
 }
 
+.w-\[45px\] {
+  width: 45px;
+}
+
+.w-\[65px\] {
+  width: 65px;
+}
+
 .w-full {
   width: 100%;
+}
+
+.w-20 {
+  width: 5rem;
+}
+
+.w-12 {
+  width: 3rem;
+}
+
+.w-32 {
+  width: 8rem;
+}
+
+.w-36 {
+  width: 9rem;
+}
+
+.w-40 {
+  width: 10rem;
 }
 
 .min-w-24 {
@@ -2246,8 +2330,16 @@ html {
   min-width: 100%;
 }
 
+.min-w-16 {
+  min-width: 4rem;
+}
+
 .max-w-\[30px\] {
   max-width: 30px;
+}
+
+.max-w-\[400px\] {
+  max-width: 400px;
 }
 
 .max-w-\[500px\] {
@@ -2256,6 +2348,10 @@ html {
 
 .max-w-\[700px\] {
   max-width: 700px;
+}
+
+.max-w-16 {
+  max-width: 4rem;
 }
 
 .flex-1 {
@@ -2275,12 +2371,6 @@ html {
 .scale-0 {
   --tw-scale-x: 0;
   --tw-scale-y: 0;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.scale-\[0\.7\] {
-  --tw-scale-x: 0.7;
-  --tw-scale-y: 0.7;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -2320,6 +2410,10 @@ html {
   justify-content: space-between;
 }
 
+.gap-1 {
+  gap: 0.25rem;
+}
+
 .gap-12 {
   gap: 3rem;
 }
@@ -2346,6 +2440,10 @@ html {
 
 .gap-6 {
   gap: 1.5rem;
+}
+
+.gap-7 {
+  gap: 1.75rem;
 }
 
 .gap-\[0\.5px\] {
@@ -2390,6 +2488,10 @@ html {
 
 .rounded {
   border-radius: 0.25rem;
+}
+
+.rounded-\[1px\] {
+  border-radius: 1px;
 }
 
 .rounded-\[2px\] {
@@ -2452,12 +2554,24 @@ html {
   border-bottom-width: 2px;
 }
 
+.border-b-\[3px\] {
+  border-bottom-width: 3px;
+}
+
+.border-l {
+  border-left-width: 1px;
+}
+
 .border-l-\[5px\] {
   border-left-width: 5px;
 }
 
 .border-r-\[5px\] {
   border-right-width: 5px;
+}
+
+.border-r {
+  border-right-width: 1px;
 }
 
 .border-solid {
@@ -2485,6 +2599,10 @@ html {
   border-color:  rgb(var(--light-gray));
 }
 
+.border-mainBg {
+  border-color: rgb(var(--mainBg));
+}
+
 .border-red-600 {
   --tw-border-opacity: 1;
   border-color: rgb(220 38 38 / var(--tw-border-opacity));
@@ -2502,6 +2620,10 @@ html {
   border-right-color: transparent;
 }
 
+.bg-\[rgba\(0\2c 0\2c 0\2c 0\.4\)\] {
+  background-color: rgba(0,0,0,0.4);
+}
+
 .bg-\[rgba\(0\2c 0\2c 0\2c 0\.5\)\] {
   background-color: rgba(0,0,0,0.5);
 }
@@ -2512,6 +2634,14 @@ html {
 
 .bg-\[rgba\(0\2c 0\2c 0\2c 0\.6\)\] {
   background-color: rgba(0,0,0,0.6);
+}
+
+.bg-\[rgba\(0\2c 0\2c 0\2c 0\.7\)\] {
+  background-color: rgba(0,0,0,0.7);
+}
+
+.bg-\[rgba\(247\2c 3\2c 3\2c 0\.52\)\] {
+  background-color: rgba(247,3,3,0.52);
 }
 
 .bg-black {
@@ -2534,6 +2664,11 @@ html {
 .bg-green-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(34 197 94 / var(--tw-bg-opacity));
+}
+
+.bg-green-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(22 163 74 / var(--tw-bg-opacity));
 }
 
 .bg-mainBg {
@@ -2561,14 +2696,6 @@ html {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-\[rgba\(0\2c 0\2c 0\2c 0\.3\)\] {
-  background-color: rgba(0,0,0,0.3);
-}
-
-.bg-\[rgba\(0\2c 0\2c 0\2c 0\.4\)\] {
-  background-color: rgba(0,0,0,0.4);
 }
 
 .object-cover {
@@ -2613,9 +2740,19 @@ html {
   padding: 7px;
 }
 
+.px-1 {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+}
+
 .px-10 {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
+}
+
+.px-16 {
+  padding-left: 4rem;
+  padding-right: 4rem;
 }
 
 .px-2 {
@@ -2633,6 +2770,11 @@ html {
   padding-right: 1rem;
 }
 
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
 .px-6 {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
@@ -2641,6 +2783,11 @@ html {
 .px-7 {
   padding-left: 1.75rem;
   padding-right: 1.75rem;
+}
+
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
 .px-\[10px\] {
@@ -2668,6 +2815,11 @@ html {
   padding-bottom: 0.5rem;
 }
 
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
@@ -2693,11 +2845,6 @@ html {
   padding-bottom: 9px;
 }
 
-.px-1 {
-  padding-left: 0.25rem;
-  padding-right: 0.25rem;
-}
-
 .pb-10 {
   padding-bottom: 2.5rem;
 }
@@ -2710,8 +2857,16 @@ html {
   padding-bottom: 8rem;
 }
 
+.pb-4 {
+  padding-bottom: 1rem;
+}
+
 .pb-5 {
   padding-bottom: 1.25rem;
+}
+
+.pb-8 {
+  padding-bottom: 2rem;
 }
 
 .pl-10 {
@@ -2742,6 +2897,10 @@ html {
   padding-right: 1.75rem;
 }
 
+.pt-1 {
+  padding-top: 0.25rem;
+}
+
 .pt-16 {
   padding-top: 4rem;
 }
@@ -2754,12 +2913,12 @@ html {
   padding-top: 7rem;
 }
 
-.pt-\[17px\] {
-  padding-top: 17px;
+.pt-5 {
+  padding-top: 1.25rem;
 }
 
-.pt-1 {
-  padding-top: 0.25rem;
+.pt-\[17px\] {
+  padding-top: 17px;
 }
 
 .text-center {
@@ -2783,6 +2942,10 @@ html {
 
 .text-\[10px\] {
   font-size: 10px;
+}
+
+.text-\[11px\] {
+  font-size: 11px;
 }
 
 .text-\[12px\] {
@@ -2815,6 +2978,14 @@ html {
 
 .text-\[20px\] {
   font-size: 20px;
+}
+
+.text-\[22px\] {
+  font-size: 22px;
+}
+
+.text-\[23px\] {
+  font-size: 23px;
 }
 
 .text-\[25px\] {
@@ -2851,6 +3022,15 @@ html {
   color: rgb(156 163 175 / var(--tw-text-opacity));
 }
 
+.text-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+
+.text-grayFive {
+  color: rgb(var(--gray-five));
+}
+
 .text-grayOne {
   color: rgb(var(--gray-one));
 }
@@ -2861,6 +3041,11 @@ html {
 
 .text-grayTwo {
   color: rgb(var(--gray-two));
+}
+
+.text-green-300 {
+  --tw-text-opacity: 1;
+  color: rgb(134 239 172 / var(--tw-text-opacity));
 }
 
 .text-shinyPurple {
@@ -2932,6 +3117,10 @@ html {
   color: rgba(var(--placeholder));
 }
 
+.checked\:border-shinyPurple:checked {
+  border-color: rgb(var(--shiny-purple));
+}
+
 .checked\:bg-grayOne:checked {
   background-color: rgb(var(--gray-one));
 }
@@ -2939,6 +3128,10 @@ html {
 .checked\:bg-red-600:checked {
   --tw-bg-opacity: 1;
   background-color: rgb(220 38 38 / var(--tw-bg-opacity));
+}
+
+.checked\:bg-shinyPurple:checked {
+  background-color: rgb(var(--shiny-purple));
 }
 
 .hover\:scale-\[0\.9\]:hover {
@@ -2962,11 +3155,6 @@ html {
 @media (min-width: 660px) {
   .smd\:max-w-\[580px\] {
     max-width: 580px;
-  }
-
-  .smd\:text-2xl {
-    font-size: 1.5rem;
-    line-height: 2rem;
   }
 }
 
@@ -3025,6 +3213,10 @@ html {
 
   .md\:pl-\[200px\] {
     padding-left: 200px;
+  }
+
+  .md\:pl-\[210px\] {
+    padding-left: 210px;
   }
 }
 
