--- a/frontend/src/css/output.css
+++ b/frontend/src/css/output.css
@@ -1005,6 +1005,18 @@ html {
   justify-self: end;
 }
 
+.progress {
+  position: relative;
+  width: 100%;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  overflow: hidden;
+  height: 0.5rem;
+  border-radius: var(--rounded-box, 1rem);
+  background-color: var(--fallback-bc,oklch(var(--bc)/0.2));
+}
+
 .radio {
   flex-shrink: 0;
   --chkbg: var(--bc);
@@ -1463,6 +1475,66 @@ html {
   }
 }
 
+.progress::-moz-progress-bar {
+  border-radius: var(--rounded-box, 1rem);
+  --tw-bg-opacity: 1;
+  background-color: var(--fallback-bc,oklch(var(--bc)/var(--tw-bg-opacity)));
+}
+
+.progress-primary::-moz-progress-bar {
+  border-radius: var(--rounded-box, 1rem);
+  --tw-bg-opacity: 1;
+  background-color: var(--fallback-p,oklch(var(--p)/var(--tw-bg-opacity)));
+}
+
+.progress:indeterminate {
+  --progress-color: var(--fallback-bc,oklch(var(--bc)/1));
+  background-image: repeating-linear-gradient(
+    90deg,
+    var(--progress-color) -1%,
+    var(--progress-color) 10%,
+    transparent 10%,
+    transparent 90%
+  );
+  background-size: 200%;
+  background-position-x: 15%;
+  animation: progress-loading 5s ease-in-out infinite;
+}
+
+.progress-primary:indeterminate {
+  --progress-color: var(--fallback-p,oklch(var(--p)/1));
+}
+
+.progress::-webkit-progress-bar {
+  border-radius: var(--rounded-box, 1rem);
+  background-color: transparent;
+}
+
+.progress::-webkit-progress-value {
+  border-radius: var(--rounded-box, 1rem);
+  --tw-bg-opacity: 1;
+  background-color: var(--fallback-bc,oklch(var(--bc)/var(--tw-bg-opacity)));
+}
+
+.progress-primary::-webkit-progress-value {
+  --tw-bg-opacity: 1;
+  background-color: var(--fallback-p,oklch(var(--p)/var(--tw-bg-opacity)));
+}
+
+.progress:indeterminate::-moz-progress-bar {
+  background-color: transparent;
+  background-image: repeating-linear-gradient(
+    90deg,
+    var(--progress-color) -1%,
+    var(--progress-color) 10%,
+    transparent 10%,
+    transparent 90%
+  );
+  background-size: 200%;
+  background-position-x: 15%;
+  animation: progress-loading 5s ease-in-out infinite;
+}
+
 @keyframes progress-loading {
   50% {
     background-position-x: -115%;
@@ -1807,6 +1879,14 @@ html {
   position: relative;
 }
 
+.-left-2 {
+  left: -0.5rem;
+}
+
+.-top-1 {
+  top: -0.25rem;
+}
+
 .bottom-0 {
   bottom: 0px;
 }
@@ -1821,10 +1901,6 @@ html {
 
 .bottom-\[-45px\] {
   bottom: -45px;
-}
-
-.bottom-\[-5px\] {
-  bottom: -5px;
 }
 
 .left-0 {
@@ -1891,6 +1967,10 @@ html {
   top: 0px;
 }
 
+.top-10 {
+  top: 2.5rem;
+}
+
 .top-16 {
   top: 4rem;
 }
@@ -1903,12 +1983,12 @@ html {
   top: 0.75rem;
 }
 
-.top-4 {
-  top: 1rem;
-}
-
 .top-\[-10px\] {
   top: -10px;
+}
+
+.top-\[-23px\] {
+  top: -23px;
 }
 
 .top-\[10px\] {
@@ -1933,42 +2013,6 @@ html {
 
 .top-\[8px\] {
   top: 8px;
-}
-
-.bottom-\[-3px\] {
-  bottom: -3px;
-}
-
-.bottom-\[-4px\] {
-  bottom: -4px;
-}
-
-.left-2 {
-  left: 0.5rem;
-}
-
-.top-1 {
-  top: 0.25rem;
-}
-
-.top-\[-15px\] {
-  top: -15px;
-}
-
-.top-\[-20px\] {
-  top: -20px;
-}
-
-.top-\[-23px\] {
-  top: -23px;
-}
-
-.top-\[-25px\] {
-  top: -25px;
-}
-
-.top-\[-27px\] {
-  top: -27px;
 }
 
 .z-10 {
@@ -2000,6 +2044,10 @@ html {
   margin-right: auto;
 }
 
+.-mt-5 {
+  margin-top: -1.25rem;
+}
+
 .mb-14 {
   margin-bottom: 3.5rem;
 }
@@ -2020,12 +2068,24 @@ html {
   margin-bottom: 1.25rem;
 }
 
+.mb-6 {
+  margin-bottom: 1.5rem;
+}
+
 .mb-7 {
   margin-bottom: 1.75rem;
 }
 
+.mb-\[-3px\] {
+  margin-bottom: -3px;
+}
+
 .mb-\[15px\] {
   margin-bottom: 15px;
+}
+
+.mb-\[2px\] {
+  margin-bottom: 2px;
 }
 
 .mb-\[3px\] {
@@ -2088,12 +2148,8 @@ html {
   margin-top: 18px;
 }
 
-.mb-\[-3px\] {
-  margin-bottom: -3px;
-}
-
-.mb-\[-5px\] {
-  margin-bottom: -5px;
+.mt-\[1px\] {
+  margin-top: 1px;
 }
 
 .box-border {
@@ -2164,12 +2220,24 @@ html {
   height: 1.75rem;
 }
 
+.h-8 {
+  height: 2rem;
+}
+
+.h-9 {
+  height: 2.25rem;
+}
+
 .h-\[100px\] {
   height: 100px;
 }
 
 .h-\[110px\] {
   height: 110px;
+}
+
+.h-\[120px\] {
+  height: 120px;
 }
 
 .h-\[170px\] {
@@ -2188,6 +2256,10 @@ html {
   height: 210px;
 }
 
+.h-\[220px\] {
+  height: 220px;
+}
+
 .h-\[24px\] {
   height: 24px;
 }
@@ -2200,6 +2272,10 @@ html {
   height: 260px;
 }
 
+.h-\[280px\] {
+  height: 280px;
+}
+
 .h-\[300px\] {
   height: 300px;
 }
@@ -2210,6 +2286,10 @@ html {
 
 .h-\[33px\] {
   height: 33px;
+}
+
+.h-\[35px\] {
+  height: 35px;
 }
 
 .h-\[38px\] {
@@ -2252,8 +2332,20 @@ html {
   max-height: 550px;
 }
 
+.max-h-\[90px\] {
+  max-height: 90px;
+}
+
 .max-h-full {
   max-height: 100%;
+}
+
+.max-h-screen {
+  max-height: 100vh;
+}
+
+.min-h-12 {
+  min-height: 3rem;
 }
 
 .min-h-16 {
@@ -2262,6 +2354,10 @@ html {
 
 .min-h-36 {
   min-height: 9rem;
+}
+
+.min-h-\[90px\] {
+  min-height: 90px;
 }
 
 .min-h-full {
@@ -2312,6 +2408,14 @@ html {
   width: 1.75rem;
 }
 
+.w-8 {
+  width: 2rem;
+}
+
+.w-9 {
+  width: 2.25rem;
+}
+
 .w-\[100\%\] {
   width: 100%;
 }
@@ -2348,8 +2452,16 @@ html {
   width: 33px;
 }
 
+.w-\[35\%\] {
+  width: 35%;
+}
+
 .w-\[350px\] {
   width: 350px;
+}
+
+.w-\[35px\] {
+  width: 35px;
 }
 
 .w-\[38px\] {
@@ -2416,6 +2528,14 @@ html {
   max-width: 600px;
 }
 
+.max-w-\[65\%\] {
+  max-width: 65%;
+}
+
+.max-w-\[70\%\] {
+  max-width: 70%;
+}
+
 .max-w-\[700px\] {
   max-width: 700px;
 }
@@ -2458,6 +2578,10 @@ html {
 
 .flex-col {
   flex-direction: column;
+}
+
+.flex-wrap {
+  flex-wrap: wrap;
 }
 
 .items-start {
@@ -2512,10 +2636,6 @@ html {
   gap: 1.5rem;
 }
 
-.gap-7 {
-  gap: 1.75rem;
-}
-
 .gap-\[0\.5px\] {
   gap: 0.5px;
 }
@@ -2534,6 +2654,10 @@ html {
 
 .overflow-y-auto {
   overflow-y: auto;
+}
+
+.overflow-x-hidden {
+  overflow-x: hidden;
 }
 
 .overflow-y-hidden {
@@ -2657,6 +2781,10 @@ html {
   border-color: rgb(75 85 99 / var(--tw-border-opacity));
 }
 
+.border-grayFive {
+  border-color: rgb(var(--gray-five));
+}
+
 .border-grayOne {
   border-color: rgb(var(--gray-one));
 }
@@ -2690,6 +2818,16 @@ html {
   border-right-color: transparent;
 }
 
+.bg-\[\#2196F3\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(33 150 243 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#FF9800\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 152 0 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#ff000081\] {
   background-color: #ff000081;
 }
@@ -2714,8 +2852,16 @@ html {
   background-color: rgba(0,0,0,0.7);
 }
 
+.bg-\[rgba\(0\2c 255\2c 0\2c 0\.6\)\] {
+  background-color: rgba(0,255,0,0.6);
+}
+
 .bg-\[rgba\(247\2c 3\2c 3\2c 0\.52\)\] {
   background-color: rgba(247,3,3,0.52);
+}
+
+.bg-\[rgba\(255\2c 0\2c 0\2c 0\.6\)\] {
+  background-color: rgba(255,0,0,0.6);
 }
 
 .bg-black {
@@ -2940,6 +3086,10 @@ html {
   padding-bottom: 7rem;
 }
 
+.pb-3 {
+  padding-bottom: 0.75rem;
+}
+
 .pb-32 {
   padding-bottom: 8rem;
 }
@@ -2950,6 +3100,10 @@ html {
 
 .pb-5 {
   padding-bottom: 1.25rem;
+}
+
+.pb-7 {
+  padding-bottom: 1.75rem;
 }
 
 .pb-8 {
@@ -3008,8 +3162,16 @@ html {
   padding-top: 17px;
 }
 
+.pt-\[65px\] {
+  padding-top: 65px;
+}
+
 .text-center {
   text-align: center;
+}
+
+.text-right {
+  text-align: right;
 }
 
 .text-2xl {
@@ -3029,6 +3191,10 @@ html {
 
 .text-\[10px\] {
   font-size: 10px;
+}
+
+.text-\[11\.5px\] {
+  font-size: 11.5px;
 }
 
 .text-\[11px\] {
@@ -3081,6 +3247,10 @@ html {
 
 .text-\[35px\] {
   font-size: 35px;
+}
+
+.text-\[3px\] {
+  font-size: 3px;
 }
 
 .text-xs {
@@ -3159,6 +3329,10 @@ html {
   color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
+.text-secMainBg {
+  color: rgb(var(--sec-mainBg));
+}
+
 .text-shinyPurple {
   color: rgb(var(--shiny-purple));
 }
@@ -3232,13 +3406,14 @@ html {
   border-color: rgb(var(--shiny-purple));
 }
 
-.checked\:bg-grayOne:checked {
-  background-color: rgb(var(--gray-one));
+.checked\:bg-\[\#2196F3\]:checked {
+  --tw-bg-opacity: 1;
+  background-color: rgb(33 150 243 / var(--tw-bg-opacity));
 }
 
-.checked\:bg-red-600:checked {
+.checked\:bg-\[\#FF9800\]:checked {
   --tw-bg-opacity: 1;
-  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
+  background-color: rgb(255 152 0 / var(--tw-bg-opacity));
 }
 
 .checked\:bg-shinyPurple:checked {
@@ -3249,6 +3424,10 @@ html {
   --tw-scale-x: 0.9;
   --tw-scale-y: 0.9;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.hover\:bg-\[rgba\(0\2c 0\2c 0\2c 0\.3\)\]:hover {
+  background-color: rgba(0,0,0,0.3);
 }
 
 .hover\:text-shinyPurple:hover {
@@ -3282,12 +3461,20 @@ html {
     display: block;
   }
 
+  .md\:flex {
+    display: flex;
+  }
+
   .md\:hidden {
     display: none;
   }
 
   .md\:h-full {
     height: 100%;
+  }
+
+  .md\:max-h-screen {
+    max-height: 100vh;
   }
 
   .md\:min-h-20 {
@@ -3302,12 +3489,28 @@ html {
     min-width: 6rem;
   }
 
+  .md\:max-w-\[50\%\] {
+    max-width: 50%;
+  }
+
+  .md\:max-w-\[550px\] {
+    max-width: 550px;
+  }
+
+  .md\:max-w-\[75\%\] {
+    max-width: 75%;
+  }
+
   .md\:flex-row {
     flex-direction: row;
   }
 
   .md\:items-start {
     align-items: flex-start;
+  }
+
+  .md\:justify-center {
+    justify-content: center;
   }
 
   .md\:justify-between {
@@ -3324,6 +3527,10 @@ html {
 
   .md\:gap-\[97px\] {
     gap: 97px;
+  }
+
+  .md\:overflow-y-auto {
+    overflow-y: auto;
   }
 
   .md\:rounded {
@@ -3345,6 +3552,10 @@ html {
 
   .md\:pl-\[180px\] {
     padding-left: 180px;
+  }
+
+  .md\:pl-\[185px\] {
+    padding-left: 185px;
   }
 
   .md\:pl-\[200px\] {
